// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`column watch default index 1`] = `
<div class="van-picker-column">
  <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 100px, 0); transition-duration: 0ms; transition-property: none;">
    <li role="button" tabindex="-1" class="van-picker-column__item van-picker-column__item--disabled van-picker-column__item--selected" style="height: 50px;">
      <div class="van-ellipsis">1</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1990</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1991</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1992</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1993</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1994</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1995</div>
    </li>
  </ul>
</div>
`;

exports[`column watch default index 2`] = `
<div class="van-picker-column">
  <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 0px, 0); transition-duration: 0ms; transition-property: none;">
    <li role="button" tabindex="-1" class="van-picker-column__item van-picker-column__item--disabled" style="height: 50px;">
      <div class="van-ellipsis">1</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1990</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 50px;">
      <div class="van-ellipsis">1991</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1992</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1993</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1994</div>
    </li>
    <li role="button" tabindex="0" class="van-picker-column__item" style="height: 50px;">
      <div class="van-ellipsis">1995</div>
    </li>
  </ul>
</div>
`;

exports[`columns-top、columns-bottom prop 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->Custom Columns Top<div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>Custom Columns Bottom
  <!---->
</div>
`;

exports[`not allow html 1`] = `
<div class="van-picker">
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">
          <div class="van-ellipsis">&lt;div&gt;option&lt;/div&gt;</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`render confirm/cancel slot 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">Custom Cancel</button><button type="button" class="van-picker__confirm">Custom Confirm</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`render option slot with object columns 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">foo</li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">bar</li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`render option slot with simple columns 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 44px;">foo</li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 44px;">bar</li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`render title slot 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button>Custom title<button type="button" class="van-picker__confirm">确认</button></div>
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`set rem item-height 1`] = `
<div class="van-picker">
  <!---->
  <div class="van-picker__columns" style="height: 960px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 400px, 0); transition-duration: 0ms; transition-property: none;">
        <li role="button" tabindex="0" class="van-picker-column__item van-picker-column__item--selected" style="height: 160px;">
          <div class="van-ellipsis">1990</div>
        </li>
        <li role="button" tabindex="0" class="van-picker-column__item" style="height: 160px;">
          <div class="van-ellipsis">1991</div>
        </li>
      </ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 400px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 160px;"></div>
  </div>
  <!---->
</div>
`;

exports[`toolbar-position prop 1`] = `
<div class="van-picker">
  <!---->
  <!---->
  <div class="van-picker__columns" style="height: 264px;">
    <div class="van-picker-column">
      <ul class="van-picker-column__wrapper" style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"></ul>
    </div>
    <div class="van-picker__mask" style="background-size: 100% 110px;"></div>
    <div class="van-hairline-unset--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
  <div class="van-picker__toolbar"><button type="button" class="van-picker__cancel">取消</button><button type="button" class="van-picker__confirm">确认</button></div>
</div>
`;
